--- a/package.json
+++ b/package.json
@@ -16,6 +16,14 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "angular": "^1.4.5",
+        "angular-animate": "^1.8.2",
+        "angular-route": "^1.8.2",
+        "bootstrap-sass": "^3.4.1",
+        "jquery": "^2.2.0"
     }
 }
